app/styles/app.css
body {
	background-color: #ededed;
}

.container {
	height: 100%;
	/*border: 1px solid blue;*/
}

.header-non-fullscreen {
	height: 10%;
}

.header-fullscreen {
	height: 0%;
}


.widget {
	border: 1px solid #a6aaba;
}

.toolbar {

    background-color: #f3f3f3;
    float: left;
    width: 100%;
    height: 8%
    margin: 1%;
    box-sizing: border-box;
}

.panels-container {
	float: left;
	width: 100%;
	
	/*border: 1px solid red;*/
}

.panels-container-non-fullscreen {
	height: 80%;
}

.panels-container-fullscreen {
	height: 90%;
}

.panel {
	float: left;
	margin: 0%;
	box-sizing: border-box;

	height: 100%;
	/*border: 1px solid green;*/
}




.edit-area-textarea {
	width: 100%;

	background-color: #f3f3f3;
	color: #000000;
	

}

.preview-display {
	height: 100%;
	width: 100%;

	border-left: none;
	padding: 5px;
	box-sizing: border-box;
	background-color: #f3f3f3;
}

.edit-area-textarea-non-fullscreen, .preview-display-non-fullscreen {
	height: 90%;
}

.edit-area-textarea-fullscreen, .preview-display-fullscreen {
	height: 100%;
	border-top: none;
}


.toolbar-left {
	float: left;
}

.toolbar-right {
	float: right;
}

button {
	width:30px;
	height:30px;
	background:#cc0000;
	font:bold 13px Arial;
	border-radius:50%;
	border:none;
	color:#fff;
}

button.fullscreen-button, button.maxmin-button {
	width: 150px;
}



ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    
}

li {
    float: left;

}

.s-bold {
	font-weight: bold;
}

.s-italic {
	font-style: italic;
}

.s-under {
	text-decoration: underline;
}

.clear {
	clear: both;
}

h3.panel-title {
	height: 5%;
	padding-top: 2px;
	padding-bottom: 2px;
	text-align: center;
	box-sizing: border-box;
}


.both-panels {
	width: 50%;
}

.panel-min {
	width: 10%;
}

.panel-max {
	width: 90%;
}

